# Adaptive-Agentic-RAG-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
adaptive_rag/: __init__.py
adaptive_rag/app/: __init__.py  streamlit_app.py
adaptive_rag/config/: __init__.py  settings.py
adaptive_rag/core/: __init__.py  agent_factory.py  model_factory.py  tool_registry.py  tools.py
adaptive_rag/knowledge/: __init__.py  embedding_factory.py  ingestion_service.py  vector_store.py
adaptive_rag/mcp/: __init__.py  mcp_server.py
adaptive_rag/memory/: __init__.py  conversation_memory.py
adaptive_rag/rag/: __init__.py  adaptive_router.py  reranker.py  retrieval_engine.py
adaptive_rag/services/: __init__.py  app_factory.py  rag_service.py  self_check.py  wiring.py
docs/: ARCHITECTURE.md  CONVENTIONS.md  GLOSSARY.md  INDEX.md  PHASES.md  PROJECT_OVERVIEW.md  RUNNING.md  TECH_STACK.md
docs/phases/: PHASE_01_FOUNDATION.md  PHASE_02_RAG_CORE.md  PHASE_03_AGENT_MEMORY.md  PHASE_04_SERVICE_LAYER.md  PHASE_05_UI_MCP.md
scripts/: smoke_llm.py
tests/: __init__.py  conftest.py  test_agent_memory.py  test_config_settings.py  test_model_factory.py  test_rag_core.py  test_rag_service.py
