[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-rag"
version = "0.1.0"
description = "Adaptive Agentic RAG System — Modular, multi-provider, MCP-ready"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "pypdf>=4.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
reranker = [
    "sentence-transformers>=2.0.0",
]
pdf = [
    "pypdf>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adaptive_rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: unit tests (no external API)",
    "smoke: smoke tests (require OPENROUTER_API_KEY)",
]
